# beatdetect.app

./: .envrc  .gitignore  .taplo.toml  flake.nix  justfile  pyproject.toml
.github/workflows/: deploy.yml
beatdetect/: __init__.py  cli.py  config_loader.py  dataset.py  histogram_params.py
beatdetect-model/: .gitignore  justfile  pyproject.toml
beatdetect-model/beatdetect_model/: cli.py  config_loader.py  reference.py
beatdetect-model/beatdetect_model/model/: __init__.py
beatdetect-model/beatdetect_model/model/postprocessing/: create_init_dist.py  create_transitions.py  inference.py  positions.py
beatdetect-model/beatdetect_model/scripts/: create_spectral_flux.py  download_annotations.py  download_spectrograms.py  normalize_annotations.py  save_onnx.py  upload_artifacts.py
beatdetect-model/configs/: dev.toml
beatdetect-model/notebooks/: 1-initial-EDA.py  2-explore-annotations.py  3-baseline-approach.py  4-model-architecture.py  6-period-transition.py  7-inference.py
beatdetect-model/tests/: test_config_loader.py  test_dataset.py
beatdetect-web/: justfile  package.json  svelte.config.js  vite.config.ts
beatdetect-web/src/: app.css  app.html
beatdetect-web/src/lib/components/: AppBar.svelte  AppShell.svelte  AudioFileUpload.svelte  LightSwitch.svelte  Tasks.svelte  Waveform.svelte
beatdetect-web/src/lib/types/: config.ts  worker-types.ts
beatdetect-web/src/lib/utils/: audio.ts  config-loader.ts  inference.ts  model-registry.ts
beatdetect-web/src/lib/workers/: postprocess-worker.ts  preprocess-worker.ts  spectral-flux-worker.ts  spectrogram-worker.ts  tcn-worker.ts
beatdetect-web/src/routes/: +layout.server.ts  +page.svelte
beatdetect-web/tests/: preprocess.test.ts
beatdetect/data/: __init__.py  collate.py  dataset.py
beatdetect/model/: __init__.py  losses.py  mock_inputs.py  tcn.py
beatdetect/model/postprocessing/: positions.py
beatdetect/scripts/: combine_dataset_info.py  create_spectral_flux.py  download_annotations.py  download_spectrograms.py  encode_annotations.py  make_splits.py  normalize_annotations.py  train.py
beatdetect/utils/: __init__.py  iterate_beat_files.py  paths.py  set_seed.py
beatdetect_app/: cli.py  config_loader.py
beatdetect_app/data/: dataset.py
beatdetect_app/model/: losses.py
beatdetect_app/model/postprocessing/: create_init_dist.py  inference.py
beatdetect_app/scripts/: combine_dataset_info.py  download_annotations.py
configs/: dev.toml
infra/: .gitignore  .terraform.lock.hcl  artifacts-bucket.tf  bucket.tf  cloudflare.tf  main.tf  site-bucket.tf  terraform.tfstate  terraform.tfvars  variables.tf
notebooks/: 1-initial-EDA.py  2-explore-annotations.py  3-baseline-approach.py  4-model-architecture.py  6-period-transition.py
tests/: test_config_loader.py  test_dataset.py
