[project]
name = "beatdetect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "librosa>=0.11.0",
  "marimo>=0.13.2",
  "mir-eval>=0.8.2",
  "numpy>=2.2.5",
  "pandas>=2.2.3",
  "plotly>=6.0.1",
  "polars>=1.27.1",
  "pypdl>=1.5.3",
  "pytorch-tcn>=1.2.3",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchinfo>=1.8.0",
  "torchview>=0.2.7",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# # torchvision = [{ index = "pytorch-cu128" }]
# torchaudio = [{ index = "pytorch-cu128" }]

[tool.marimo.runtime]
auto_instantiate = false
on_cell_change = "lazy"
output_max_bytes = 20_000_000
[tool.marimo.display]
theme = "dark"
cell_output = "below"

[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
