[project]
name = "beatdetect-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "librosa>=0.11.0",
  "mir-eval>=0.8.2",
  "numpy>=2.2.6",
  "pandas>=2.3.2",
  "plotly>=6.3.0",
  "polars>=1.33.1",
  "pydantic>=2.11.9",
  "pypdl>=1.5.6",
  "pytorch-tcn>=1.2.3",
  "scipy>=1.16.2",
  "tensorboard>=2.20.0",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "torchinfo>=1.8.0",
  "torchview>=0.2.7",
  "tqdm>=4.67.1",
  "typer>=0.17.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
beatdetect-app = "beatdetect-app.cli:app"

[tool.marimo.runtime]
auto_instantiate = false
auto_reload = "lazy"
on_cell_change = "lazy"
output_max_bytes = 20_000_000
[tool.marimo.display]
theme = "dark"
cell_output = "below"
[tool.marimo.language_servers.pylsp]
enabled = true
enable_ruff = true
[tool.marimo.diagnostics]
enabled = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
unfixable = ["F401", "F841"]

[dependency-groups]
dev = [
  "marimo[lsp]>=0.15.3",
  "pytest>=8.4.2",
  "ruff>=0.13.0",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.2",
]
